--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ma page</title>
+    <title>Ma page HTML</title>
 </head>
 <body>
     
@@ -13,4 +13,5 @@
     
     <img src="chat.jpg" alt="Chat joueur" width="500px">
 </body>
+
 </html>
